--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@point-of-sale/receipt-printer-encoder": "^3.0.3",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "laravel-echo": "^2.1.4",
+    "pureimage": "^0.4.18",
+    "pusher-js": "^8.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
-    "sweetalert2": "^11.21.2",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
